@@ -21,25 +21,23 @@ var JOpenID = new Class({
 
 	initialize: function()
 	{
-		//Create dynamic elements
 		var switcher = new Element('a', { 'styles': {'cursor': 'pointer'},'id': 'openid-link'});
 		switcher.inject($('form-login'));
-
 		var link = new Element('a', { 'styles': {'text-align' : 'right', 'display' : 'block', 'font-size' : 'xx-small'}, 'href' : 'http://openid.net'});
-		link.setHTML(JLanguage.WHAT_IS_OPENID);
+		link.set('html', JLanguage.WHAT_IS_OPENID);
 
 		//Initialise members
 		this.switcher = switcher;
 		this.link     = link;
-		this.state    = Cookie.get('login-openid');
-		this.length   = $('form-login-password').getSize().size.y;
+		this.state    = Cookie.read('login-openid');
+		this.length   = $('form-login-password').getSize().y;
 
 		this.switch(this.state, 0);
 
 		this.switcher.addEvent('click', (function(event) {
 			this.state = this.state ^ 1;
 			this.switch(this.state, 300);
-			Cookie.set('login-openid', this.state);
+			Cookie.write('login-openid', this.state);
 		}).bind(this));
 	},
 
@@ -47,23 +45,23 @@ var JOpenID = new Class({
 	{
 		var password = $('form-login-password');
 		var username = $('modlgn_username');
-
+		var passwordTween = new Fx.Tween(password, {'property': 'height'}, { 'duration': time });
+		var passwordOpaqTween = new Fx.Tween(password, {'property': 'opacity'}, { 'duration': time });
 		if(state == 0)
 		{
 			username.removeClass('system-openid');
 			var text = JLanguage.LOGIN_WITH_OPENID;
-			password.effect('height',  {duration: time}).start(0, this.length);
+			passwordTween.start(0, this.length);
 		}
 		else
 		{
 			username.addClass('system-openid');
 			var text = JLanguage.NORMAL_LOGIN;
-			password.effect('height',  {duration: time}).start(this.length, 0);
+			passwordTween.start(this.length, 0);
 		}
 
-		password.effect('opacity', {duration: time}).start(state,1-state);
-
-		this.switcher.setHTML(text);
+		passwordOpaqTween.start(state, 1-state);
+		this.switcher.set('html', text);
 	}
 });
 
@@ -75,49 +73,48 @@ var JOpenID_com = new Class({
 
 	initialize: function()
 	{
-		//Create dynamic elements
 		var switcher = new Element('a', { 'styles': {'cursor': 'pointer'},'id': 'com-openid-link'});
 		switcher.inject($('com-form-login'));
-
 		var link = new Element('a', { 'styles': {'text-align' : 'right', 'display' : 'block', 'font-size' : 'xx-small'}, 'href' : 'http://openid.net'});
-		link.setHTML(JLanguage.WHAT_IS_OPENID);
+		link.set('html', JLanguage.WHAT_IS_OPENID);
 
 		//Initialise members
 		this.switcher = switcher;
 		this.link     = link;
-		this.state    = Cookie.get('login-openid');
-		this.length   = $('com-form-login-password').getSize().size.y;
+		this.state    = Cookie.read('login-openid');
+		this.length   = $('com-form-login-password').getSize().y;
 
 		this.switch(this.state, 0);
 
 		this.switcher.addEvent('click', (function(event) {
 			this.state = this.state ^ 1;
 			this.switch(this.state, 300);
-			Cookie.set('login-openid', this.state);
+			Cookie.write('login-openid', this.state);
 		}).bind(this));
 	},
+
 
 	switch : function(state, time)
 	{
 		var password = $('com-form-login-password');
 		var username = $('username');
-
+		var passwordTween = new Fx.Tween(password, {'property': 'height'}, { 'duration': time });
+		var passwordOpaqTween = new Fx.Tween(password, {'property': 'opacity'}, { 'duration': time });
 		if(state == 0)
 		{
 			username.removeClass('system-openid');
 			var text = JLanguage.LOGIN_WITH_OPENID;
-			password.effect('height',  {duration: time}).start(0, this.length);
+			passwordTween.start(0, this.length);
 		}
 		else
 		{
 			username.addClass('system-openid');
 			var text = JLanguage.NORMAL_LOGIN;
-			password.effect('height',  {duration: time}).start(this.length, 0);
+			passwordTween.start(this.length, 0);
 		}
 
-		password.effect('opacity', {duration: time}).start(state,1-state);
-
-		this.switcher.setHTML(text);
+		passwordOpaqTween.start(state, 1-state);
+		this.switcher.set('html', text);
 	}
 });
 
@@ -125,12 +122,12 @@ var JOpenID_com = new Class({
 document.openid = null
 document.com_openid = null
 window.addEvent('domready', function(){
-  if (modlogin == 1) {
-  	var openid = new JOpenID()
-  	document.openid = openid
+  if ($defined(modlogin)) {
+  	var openid = new JOpenID();
+  	document.openid = openid;
   }
-  if (comlogin == 1) {
-  	var com_openid = new JOpenID_com()
-  	document.com_openid = openid
+  if ($defined(comlogin)) {
+  	var com_openid = new JOpenID_com();
+  	document.com_openid = openid;
   }
 });
