@@ -28,6 +28,10 @@ COMMITERS
 Do not forget to update this page on the wiki when making changes relevant to developers:
 http://docs.joomla.org/index.php?title=Version_1.6_Developer_Notes
 
+30-Jan-2009 Ian MacLennan
+ ^ Updated OpenID library to version 2.0.  Updated openid.js (for hiding and showing the openid logo) for MooTools 1.2.
+ # Fixed issue with JMailHelper (ported from 1.5) that allows periods at the end of URLs (as per spec).
+
 29-Jan-2009 Charl van Niekerk
  - Removed target="_blank" attributes from com_content.
 
